--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="example"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
